contrast issues

--- a/src/Components/UserReservations/UserReservations.css
+++ b/src/Components/UserReservations/UserReservations.css
@@ -1,5 +1,5 @@
 .userReservations {
-  background-color: #1b2b46;
+  background-color: #5153bd;
   border-radius: 5%;
   width: 80%;
   margin-left: auto;
